<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ocelot</string>
    <string name="edit_message">Current Activity</string>
    <string name="edit_mood">Mood (1-100)</string>
    <string name="button_send">Save Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Activity Record</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="date_label_set">Choose the day you wish to view</string>
    <string name="date_button_set">Select Date</string>
    <string name="date_view_set">Viewing Records for: </string>
    <string name="date_selected"></string>
    <string name="date_button">Get records</string>

    <string name="title_activity_old_thought_record">Past Thought Records</string>
    <string name="title_activity_activity_log">Past Activity Logs</string>
    <string name="title_activity_new_activity_log">New Activity Log</string>
    <string name="title_activity_new_tr">New Thought Record</string>
    <string name="title_view_tr">Thought Records</string>

    <string name="new_tr_act">What are you doing right now?</string>
    <string name="new_tr_thoughts">What thoughts are you having?</string>
    <string name="new_tr_feeling">What is your main emotion?</string>
    <string name="new_tr_strength1">How strong is it? (1-100)</string>
    <string name="new_tr_alt">Think of some alternative responses</string>
    <string name="new_tr_strength2">How strong is the emotion now? (1-100)</string>
    <string name="new_tr_button">Save thought record</string>
    <string name="title_activity_maps">Map</string>

    <string name="phone_number_suicide_help">1-800-273-8255</string>
    <string name="help_links_title">Resources for immediate help</string>
</resources>