<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1AL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/date_label_set"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1AL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:onClick="setDateAL"
        android:text="@string/date_button_set" />

    <TextView
        android:id="@+id/textView2AL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1AL"
        android:layout_marginTop="66dp"
        android:layout_toLeftOf="@+id/button1AL"
        android:text="@string/date_view_set"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3AL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1AL"
        android:layout_below="@+id/textView2AL"
        android:layout_marginTop="72dp"
        android:text="@string/date_selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <Button
        android:id="@+id/ButtonSendDateAL"
        android:layout_height="wrap_content"
        android:text="@string/date_button"
        android:layout_width="fill_parent">
    </Button>

</LinearLayout>