<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/activity_main">
    <EditText android:id="@+id/al_activity_main"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/edit_message" />
    <EditText android:id="@+id/al_mood_main"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/edit_mood" />
    <Button android:id="@+id/al_send_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="saveActivityLogMain"
            android:text="@string/button_send" />
</LinearLayout>

